Add in potential codebases

--- a/_includes/sidenav.html
+++ b/_includes/sidenav.html
@@ -2,11 +2,23 @@
         <h3 class="nhsuk-side-navigation__title">Codebases</h3>
         <ul class="nhsuk-side-navigation__list" style="list-style-type: none;">
           <li class="nhsuk-side-navigation__item nhsuk-side-navigation__item--active">
-            <a href="Example.html" aria-current="location">Example</a>
+            <a href="Geospatial.html" aria-current="location">MedcialMap</a>
           </li>
   
           <li class="nhsuk-side-navigation__item">
-            <a href="Example2.html">Example 2</a>
+            <a href="NHSSynth.html">NHS Synth</a>
+          </li>
+
+          <li class="nhsuk-side-navigation__item">
+            <a href="AmbSIm.html">AmbSim</a>
+          </li>
+
+          <li class="nhsuk-side-navigation__item">
+            <a href="STM.html">STM</a>
+          </li>
+
+          <li class="nhsuk-side-navigation__item">
+            <a href="Forecasting.html">Forecasting</a>
           </li>
 
         </ul>
