--- a/_layouts/base.html
+++ b/_layouts/base.html
@@ -26,7 +26,7 @@
                 Disclaimer
               </span>
             </h3>
-            <p>This is not the official site but a set of signposts to our recent work. For more information about NHS England please visit our official <a style="color: #CF3587"
+            <p>This is not the official site but a set of links to codebases designed to be adapted for wider use. For more information about NHS England please visit our official <a style="color: #CF3587"
                 href="https://www.england.nhs.uk/">website</a></p>
           </div>
 
