Added additional placeholders

--- a/_includes/sidenav.html
+++ b/_includes/sidenav.html
@@ -21,6 +21,18 @@
             <a href="Forecasting.html">Forecasting</a>
           </li>
 
+          <li class="nhsuk-side-navigation__item">
+            <a href="HyperGraphs.html">Forecasting</a>
+          </li>
+
+          <li class="nhsuk-side-navigation__item">
+            <a href="MultiNet.html">Forecasting</a>
+          </li>
+
+          <li class="nhsuk-side-navigation__item">
+            <a href="DNAttend.html">Forecasting</a>
+          </li>
+
         </ul>
       </nav>
 
