--- a/_includes/sidenav.html
+++ b/_includes/sidenav.html
@@ -22,15 +22,15 @@
           </li>
 
           <li class="nhsuk-side-navigation__item">
-            <a href="HyperGraphs.html">Forecasting</a>
+            <a href="HyperGraphs.html">HyperGraphs</a>
           </li>
 
           <li class="nhsuk-side-navigation__item">
-            <a href="MultiNet.html">Forecasting</a>
+            <a href="MultiNet.html">MultiNet</a>
           </li>
 
           <li class="nhsuk-side-navigation__item">
-            <a href="DNAttend.html">Forecasting</a>
+            <a href="DNAttend.html">DNAttend</a>
           </li>
 
         </ul>
