--- a/_includes/sidenav.html
+++ b/_includes/sidenav.html
@@ -22,7 +22,7 @@
           </li>
 
           <li class="nhsuk-side-navigation__item">
-            <a href="HyperGraphs.html">HyperGraphs</a>
+            <a href="HyperGraph.html">HyperGraphs</a>
           </li>
 
           <li class="nhsuk-side-navigation__item">
