Updates to mkdoc pages

--- a/_includes/sidenav.html
+++ b/_includes/sidenav.html
@@ -2,7 +2,7 @@
         <h3 class="nhsuk-side-navigation__title">Codebases</h3>
         <ul class="nhsuk-side-navigation__list" style="list-style-type: none;">
           <li class="nhsuk-side-navigation__item nhsuk-side-navigation__item--active">
-            <a href="Geospatial.html" aria-current="location">MedcialMap</a>
+            <a href="Geospatial.html" aria-current="location">MedicalMap</a>
           </li>
   
           <li class="nhsuk-side-navigation__item">
@@ -10,7 +10,7 @@
           </li>
 
           <li class="nhsuk-side-navigation__item">
-            <a href="AmbSIm.html">AmbSim</a>
+            <a href="AmbSim.html">AmbModelOpen</a>
           </li>
 
           <li class="nhsuk-side-navigation__item">
