Incorporate forecasting split

--- a/_includes/sidenav.html
+++ b/_includes/sidenav.html
@@ -18,7 +18,11 @@
           </li>
 
           <li class="nhsuk-side-navigation__item">
-            <a href="Forecasting.html">Forecasting</a>
+            <a href="Forecasting1.html">Forecasting Introduction</a>
+          </li>
+
+          <li class="nhsuk-side-navigation__item">
+            <a href="Forecasting2.html">Forecasting Univariate</a>
           </li>
 
           <li class="nhsuk-side-navigation__item">
