Minor Updates to Forecasting

--- a/_includes/sidenav.html
+++ b/_includes/sidenav.html
@@ -18,7 +18,7 @@
           </li>
 
           <li class="nhsuk-side-navigation__item">
-            <a href="Forecasting1.html">Forecasting Introduction</a>
+            <a href="Forecasting1.html">Forecasting Intro</a>
           </li>
 
           <li class="nhsuk-side-navigation__item">
